# dpatch

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  dlmain.c  main.c
demo/: CMakeLists.txt  print_load_address.c  self_patch.c  self_patch.patch
dpatch/: CMakeLists.txt  machine_code.c  main.c  metamorphosis.c  patch.c  patch_script.c  patch_set.c  x64_code_generator.c
dpatch/include/: code_generator.h  machine_code.h  metamorphosis.h  patch.h  patch_script.h  patch_set.h  status.h
tests/: CMakeLists.txt  basic.c
